manifests/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudops-api
  namespace: cloudops-prod 
  labels:
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: api 
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 3000
      containers:
        - name: api 
          image: 599476212737.dkr.ecr.ap-south-1.amazonaws.com/cloudops-dev-api:73ba8ba83666b47c59831cdbe957f9d9dc25235d
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          securityContext:
            runAsNonRoot: true
            runAsUser: 3000
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
