manifests/api/service.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: cloudops-api
  namespace: cloudops-prod
  labels:
    app: cloudops-api
spec:
  type: ClusterIP
  selector:
    app: api 
  ports:
    - name: http
      port: 3000
      targetPort: 3000
