manifests/api/api-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-network-policy
  namespace: cloudops-prod
spec:
  podSelector:
    matchLabels:
      app: api 
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx 
  egress:
    - to:
        - podSelector:
             matchLabels:
               app: redis
      ports: 
        - port: 6379

    - to: 
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - port: 5432
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
